[gd_scene load_steps=2 format=2]

[ext_resource path="res://Play Menu/PlayMenu.gd" type="Script" id=1]

[node name="PlayMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.0509804, 0.0509804, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 860.0
margin_top = 478.0
margin_right = 1060.0
margin_bottom = 602.0
custom_constants/separation = 15

[node name="PlayLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
rect_min_size = Vector2( 200, 0 )
text = "Play"
align = 1
valign = 1

[node name="LobbyNameEdit" type="TextEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 200.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 25 )
__meta__ = {
"_editor_description_": ""
}

[node name="CreateButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 200.0
margin_bottom = 89.0
custom_constants/hseparation = 0
text = "Create Lobby"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 200.0
margin_bottom = 124.0
text = "Join Lobby"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
